Changelog for GEMC
==================

10/5/16
 - added tdc variable for clas12 dc

9/28/16
 - addressing precision issue in bst hit process routine
 - ec process ID is now empty - every strip is now a volume

9/27/16
 - fixed cosmic routine, was not generating cosmics vertices correctly.

9/15/16
 - writeFADCMode7 - not final version yet
 - composite banks interface finalized
 - added template voltage signal for the hit process routines that supports it

9/13/16
 - using DGauss as default for ec hit process routine voltage signal
 - default sampling time: 4 ns. Default number of samples: 250 (1 microsecond total)
 - moving translation tables to hit process constants - out of event/instantiated hit process routine
 - adding crate/slot/channel to vsignal
 - modifying ec process routine accordingly
 - added writeFADCMode1

9/12/16
 - added setQuantumS and createQuantumS to form voltage vs time function
 - quantumS created based on user routine **voltage** which returns a voltage value for a given time. The inputs are:

	 - charge value (coming from chargeAtElectronics)
	 - time (coming from timeAtElectronics)

9/6/16
 - added muBrems muonNuclear kaon0SInelastic
 - grouped processes by particle types

8/19/16
 - using fscanf return value for field map reading
 - evio output finalized for charge / time information at electronics

8/18/16
 - text output finalized for charge / time information at electronics

8/17/16
 - implementation / test of charge / time information for calorimeter.
 - starting to write output implementation for charge / time information. TXT in progress

8/16/16
 - introducing chargeTime output in the output factory
 - introducing two new pure virtual functions to be implemented in the hit process routines:

    -  map< int, vector <double> > chargeTime(MHit*, int): will provide 4 outputs:

        #. step index
        #. charge (as seen by a PMT) for a given step
        #. time (as arriving to the PMT) for a given step
        #. hit number
